arc-script/arc-script-test/compile/src/snapshots/rust@fun.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_pass/fun.arc

---
#[allow(non_snake_case)]
#[allow(unused_must_use)]
#[allow(dead_code)]
#[allow(unused_variables)]
#[allow(unused_imports)]
#[allow(unused_braces)]
#[allow(irrefutable_let_patterns)]
#[allow(clippy::redundant_field_names)]
#[allow(clippy::unused_unit)]
#[allow(clippy::double_parens)]
pub mod arc_script_output {
    use super::*;
    use arc_script::arcorn;
    pub fn max(a_0: i32, b_0: i32) -> i32 {
        let x_0: bool = (a_0.clone()) > (b_0.clone());
        let x_3: i32 = if (x_0.clone()) {
            let x_1: i32 = 1i32;
            let x_2: i32 = (a_0.clone()) + (x_1.clone());
            (x_2.clone())
        } else {
            (b_0.clone())
        };
        (x_3.clone())
    }
    pub fn test() -> i32 {
        let x_4: Box<dyn arcorn::ArcornFn(i32, i32) -> i32> =
            Box::new(max) as Box<dyn arcorn::ArcornFn(i32, i32) -> i32>;
        let x_5: i32 = 1i32;
        let x_6: i32 = 2i32;
        let x_7: i32 = (x_4.clone())((x_5.clone()), (x_6.clone()));
        (x_7.clone())
    }
}
pub use arc_script_output::*;


