arc-script/arc-script-test/compile/src/snapshots/rust@sort_fields.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_pass/sort_fields.arc

---
#[allow(non_snake_case)]
#[allow(unused_must_use)]
#[allow(dead_code)]
#[allow(unused_variables)]
#[allow(unused_imports)]
#[allow(unused_braces)]
pub mod defs {
    use super::*;
    pub use arc_script::arcorn;
    pub use arc_script::arcorn::state::{ArcMapOps, ArcRefOps, ArcSetOps, ArcVecOps};
    pub use arcon::prelude::*;
    pub fn foo(a_0: Struct1xi321yi32End) -> i32 {
        let y_1_0 = a_0.x;
        let y_1_1 = a_0.y;
        let y_1_2 = y_1_0 + y_1_1;
        y_1_2
    }
    pub fn bar(a_1: Struct1xi321yi32End) -> i32 {
        let y_1_0 = a_1.x;
        let y_1_1 = a_1.y;
        let y_1_2 = y_1_0 + y_1_1;
        y_1_2
    }
    #[arcorn::rewrite]
    #[derive(Copy)]
    pub struct Struct1xi321yi32End {
        x: i32,
        y: i32,
    }
}
pub use defs::*;


