arc-script/arc-script-test/compile/src/snapshots/rust@stream_typing.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_mlir_fail_todo/stream_typing.arc

---
#[allow(non_snake_case)]
#[allow(unused_must_use)]
#[allow(dead_code)]
#[allow(unused_variables)]
#[allow(unused_imports)]
#[allow(unused_braces)]
pub mod defs {
    use super::*;
    pub use arc_script::arcorn;
    pub use arc_script::arcorn::state::{ArcMapOps, ArcRefOps, ArcSetOps, ArcVecOps};
    pub use arcon::prelude::*;
    pub fn test0(x_0: Stream<Struct3vali323keyi32End>) -> Stream<Struct3vali323keyi32End> {
        let y_1_0 = Stream::operator(x_0, test1);
        y_1_0
    }
    pub fn test1(x_1: Stream<Struct3vali323keyi32End>) -> Stream<Struct3vali323keyi32End> {
        x_1
    }
    #[arcorn::rewrite]
    #[derive(Copy)]
    pub struct Struct3vali323keyi32End {
        val: i32,
        key: i32,
    }
}
pub use defs::*;


